--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.logo{
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.err-msg{
+  color: red;
+  padding-left: 10px;
+}
