发送消息，scoket发送消息，监听消息 消息记录及头像显示

--- a/src/assert/css/index.css
+++ b/src/assert/css/index.css
@@ -1,114 +1,464 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+/* 禁用iPhone中Safari的字号自动调整 */
+html
+{
+    -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+    　　font-size: 62.5%;
+}
+/* 去除iPhone中默认的input样式 */
+input[type='submit'],
+input[type='reset'],
+input[type='button'],
+input
+{
+    resize: none;
+
+    -webkit-appearance: none;
+}
+/* 取消链接高亮  */
+body,
+div,
+ul,
+li,
+ol,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+textarea,
+select,
+p,
+dl,
+dt,
+dd,
+a,
+img,
+button,
+form,
+table,
+th,
+tr,
+td,
+tbody,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section
+{
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+/* 设置HTML5元素为块 */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section
+{
+    display: block;
+}
+/* 图片自适应 */
+img
+{
+    width: auto\9; /* ie8 */
+    max-width: 100%;
+    height: auto;
+
+    -ms-interpolation-mode: bicubic;/*为了照顾ie图片缩放失真*/
+}
+/* 初始化 */
+body,
+div,
+ul,
+li,
+ol,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+textarea,
+select,
+p,
+dl,
+dt,
+dd,
+a,
+img,
+button,
+form,
+table,
+th,
+tr,
+td,
+tbody,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section
+{
+    margin: 0;
+    padding: 0;
+
+    border: none;
+}
+body
+{
+    font: normal 14px/1.5 Tahoma,'Lucida Grande',Verdana,'Microsoft Yahei',STXihei,hei;
+}
+em,
+i
+{
+    font-style: normal;
+}
+strong
+{
+    font-weight: normal;
+}
+.clearfix:after
+{
+    display: block;
+    visibility: hidden;
+    clear: both;
+
+    height: 0;
+
+    content: '';
+}
+.clearfix
+{
+    zoom: 1;
+}
+a
+{
+    font-family: '宋体',Microsoft YaHei,Tahoma,Arial,sans-serif;
+
+    text-decoration: none;
+
+    color: #969696;
+}
+a:hover
+{
+    text-decoration: none;
+
+    color: #fff;
+}
+ul,
+ol
+{
+    list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+{
+    font-family: Microsoft YaHei;
+    font-size: 100%;
+}
+img
+{
+    border: none;
 }
 
-.logo{
-  margin-top: 50px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-.err-msg{
-  color: red;
-  padding-left: 10px;
-  line-height: 30px;
-  padding-top: 10px;
-  margin-bottom: 5px;
+body
+{
+    font-family: sans-serif;
+
+    margin: 0;
+    padding: 0;
 }
 
-.app{
- background: #fafafa;
+ @media only screen and (min-width: 320px){
+    html {
+      font-size: 62.5% !important;
+    }
+  }
+  @media only screen and (min-width: 640px){
+    html {
+      font-size: 125% !important;
+    }
+  }
+  @media only screen and (min-width: 750px){
+    html {
+      font-size: 150% !important;
+    }
+  }
+  @media only screen and (min-width: 1242px){
+    html {
+      font-size: 187.5% !important;
+    }
+  }
+
+/*content*/
+.logo
+{
+    margin-top: 50px;
+    margin-bottom: 20px;
+
+    text-align: center;
+}
+.err-msg
+{
+    line-height: 30px;
+
+    margin-bottom: 5px;
+    padding-top: 10px;
+    padding-left: 10px;
+
+    color: red;
+}
+
+.app
+{
+    background: #F5F5F5;
 }
 /*header*/
-.app .app-header{
+.app .app-header
+{
     position: fixed;
+    z-index: 1000;
     top: 0;
     left: 0;
+
     width: 100%;
-    z-index: 1000;
 }
 
 /*footer*/
-.app .app-footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+.app .app-footer
+{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
 }
-.app .app-footer .app-footer-con{
-  background: #fafafa;
-  height: 100%;
-  text-align: left;
+.app .app-footer .app-footer-con
+{
+    height: 100%;
+
+    text-align: left;
+
+    background: #fafafa;
 }
-.app .app-footer .am-tab-bar{}
-.app .app-footer .am-tab-bar .am-tabs{}
-.app .app-footer .am-tab-bar .am-tabs .am-tabs-tab-bar-wrap{
-    background: #fff;
+
+
+.app .app-footer .am-tab-bar .am-tabs .am-tabs-tab-bar-wrap
+{
     z-index: 1000;
+
+    background: #fff;
 }
-.am-tabs-content-wrap{
+.am-tabs-content-wrap
+{
     z-index: 999;
 }
 /*CONTENT*/
-.app .app-con{
+.app .app-con
+{
     margin: 45px 0;
 }
 /*user list */
-.app .app-con .app-card{
-  margin-bottom: 10px;
+.app .app-con .app-card
+{
+    margin-bottom: 10px;
 }
-.app .app-con .app-card .am-card-header{
-  padding: 5px 15px;
+.app .app-con .app-card .am-card-header
+{
+    padding: 5px 15px;
 }
-.app .app-con .app-card .am-card-header img{
+.app .app-con .app-card .am-card-header img
+{
     width: 50px;
     height: 50px;
     margin-right: 8px;
 }
-.app .app-con .app-card .am-card-header-content{
-  font-size: 14px;
+.app .app-con .app-card .am-card-header-content
+{
+    font-size: 14px;
 }
-.app .app-con .app-card .am-card-header-extra{
-  font-size: 15px;
+.app .app-con .app-card .am-card-header-extra
+{
+    font-size: 15px;
 }
-.app .app-con .app-card .am-card-body{
-  /*padding: 15px 15px 6px;*/
+.app .app-con .app-card .am-card-body
+{
+    /*padding: 15px 15px 6px;
+  */;
 }
-.app .app-con .app-card .am-card-body h5{
-  margin: 0 0 10px 0;
-  font-size: 16px;
-  font-weight: normal;
+.app .app-con .app-card .am-card-body h5
+{
+    font-size: 16px;
+    font-weight: normal;
+
+    margin: 0 0 10px 0;
 }
-.app .app-con .app-card .am-card-body span{
-  float: right;
-  color: #0891ff;
+.app .app-con .app-card .am-card-body span
+{
+    float: right;
+
+    color: #0891ff;
 }
-.app .app-con .app-card .am-card-body p{
-  margin: 0;
-  line-height: 20px;
-  font-size: 13px;
-  color: #aaa;
+.app .app-con .app-card .am-card-body p
+{
+    font-size: 13px;
+    line-height: 20px;
+
+    margin: 0;
+
+    color: #aaa;
 }
 
 /*my center*/
-.app .app-con .app-my .am-result{
 
-}
-.app .app-con .app-my .am-result .am-result-pic img{
+.app .app-con .app-my .am-result .am-result-pic img
+{
     width: 100%;
     height: 100%;
 }
-.app .app-con .app-my .my-list{
 
-}
-.app .app-con .app-my .my-list .am-list-body p{
+.app .app-con .app-my .my-list .am-list-body p
+{
     margin: 5px 0;
 }
-.app .app-con .app-my .my-list-out{
+.app .app-con .app-my .my-list-out
+{
     margin-top: 30px;
 }
-.app .app-con .app-my .my-list-out .am-list-content{
+.app .app-con .app-my .my-list-out .am-list-content
+{
     text-align: center;
+
     color: #0891ff;
+}
+
+/*chat*/
+.app-chat .am-navbar{
+      position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+}
+.app-chat .app-chat-con{
+  margin: 45px 0;
+  padding: 20px 0;
+}
+
+.app-chat .app-chat-con .app-chat-con-list{
+    text-align: left;
+    margin: 0 10px;
+}
+
+.app-chat .app-chat-con .app-chat-con-list img{
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+}
+
+.app-chat .app-chat-con .app-chat-con-list2{
+    text-align: right;
+}
+
+
+.app-chat .app-chat-con .app-chat-con-list>span{
+  color: red;
+}
+
+/*left*/
+.app-chat .app-chat-con .app-chat-msg
+{
+    position: relative;
+    display: inline-block;
+
+    width: auto;
+    margin: 10px;
+
+    text-align: left;
+}
+.app-chat .app-chat-con .app-chat-msg:after
+{
+    position: absolute;
+    top: 14px;
+    left: -5px;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    content: '';
+    transform: rotate(45deg);
+    margin-left: 4px;
+    border: 1px solid #ddd;
+    border-width: 0 0 1px 1px;
+}
+.app-chat .app-chat-con .app-chat-msg span.msg
+{
+    line-height: 30px;
+
+    display: inline-block;
+
+    margin-right: 5px;
+    margin-left: 5px;
+    padding: 5px 10px;
+
+    border-radius: 5px;
+    background: #fff;
+    border: 1px solid #ddd;
+}
+
+/*right*/
+.app-chat .app-chat-con .app-chat-con-list2 .app-chat-msg
+{
+    text-align: right;
+
+    color: #fff;
+}
+.app-chat .app-chat-con .app-chat-con-list2 .app-chat-msg:after
+{
+    left: calc(100% - 16px);
+
+    border: none;
+    background: #0891ff;
+}
+.app-chat .app-chat-con .app-chat-con-list2 .app-chat-msg span.msg
+{
+    background: #0891ff;
+}
+/*input*/
+.app-chat .app-chat-input
+{
+    position: fixed;
+    bottom: 0;
+
+    width: 100%;
+}
+.app-chat .app-chat-input .am-list-item .am-input-control input
+{
+    font-size: 1.5rem;
 }
